Códigos refatorados e assisti até a aula 144, relacionamento um pra muitos.